--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.
-Lab 7, part 2 was a favorite because I was always curious about how the
+<p>Lab 7, part 2 was a favorite because I was always curious about how the
     game Blackjack works. I was able to write functions for the first time
     that calculate the correct value of a Blackjack hand no matter how many
     Aces were dealt. 
