--- a/index.html
+++ b/index.html
@@ -2,28 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Lab 7, part 2 was a favorite because I was always curious about how the
-    game Blackjack works. I was able to write functions for the first time
-    that calculate the correct value of a Blackjack hand no matter how many
-    Aces were dealt. 
-</p>
-</body>
-  
-# Hello World
-
-This is my home page! My name is Your Name and I am a student at [Cal State Fullerton](http://www.fullerton.edu/) and my major is your_major.
-
-## Computer Science Projects
-
-My GitHub page is http://github.com/your_username.
-
-### CPSC 120
-
-* Lab 7
-
-    Lab 7, part 2 was a favorite because I was always curious about how the
-    game Blackjack works. I was able to write functions for the first time
-    that calculate the correct value of a Blackjack hand no matter how many
-    Aces were dealt.  
+<p> This is my home page! My name is Ivan Solis and I am a student at <a href="http://www.fullerton.edu/">Cal State Fullerton</a> and my major is Computer Science. </p>
+    <h2>My GitHub page is http://github.com/igsolis.</h2>
+    </body>
   
 </html>
